y.output
   0  $accept : program $end

   1  program : MAIN LB statements RB

   2  statements : statements statement
   3             | empty

   4  statement : statementBlockEl
   5            | ifStatement

   6  ifStatement : matched
   7              | unmatched

   8  loopStatement : forLoop
   9                | whileLoop

  10  forLoop : FOR VARIABLE IN forTerm FORDOT forTerm forStepExp LB statements RB
  11          | FOR VARIABLE IN forTerm FORDOT forTerm LB statements RB

  12  whileLoop : WHILE logicCondition LB statements RB

  13  assignment : VARIABLE ASSIGN logicCondition
  14             | VARIABLE ASSIGN STRING

  15  declaration : constantDec
  16              | variableDec
  17              | functionDec

  18  constantDec : CONST type COLON CONSTANT ASSIGN logicCondition
  19              | CONST type COLON CONSTANT ASSIGN STRING

  20  variableDec : type COLON VARIABLE
  21              | type COLON VARIABLE ASSIGN logicCondition
  22              | type COLON VARIABLE ASSIGN STRING
  23              | type COLON VARIABLE ASSIGN SCAN

  24  functionDec : FUNC VARIABLE parameterExp functionoutExp LB statements returnStatement RB
  25              | FUNC VARIABLE parameterExp LB statements returnStatement RB

  26  functionCall : VARIABLE LP RP
  27               | VARIABLE LP callParamList RP
  28               | outStatement
  29               | inStatement
  30               | drone_method LP RP

  31  outStatement : PRINT printables

  32  printables : printables COMMA logicCondition
  33             | printables COMMA STRING
  34             | logicCondition
  35             | STRING

  36  inStatement : VARIABLE ASSIGN SCAN

  37  drone_method : droneGet
  38               | cameraStatus
  39               | takePicture
  40               | connect
  41               | disconnect

  42  droneGet : GETACCELERATION
  43           | GETALTITUDE
  44           | GETINCLINATION
  45           | GETTEMPERATURE
  46           | GETTIMESTAMP

  47  cameraStatus : TURNCAMERA

  48  takePicture : TAKEPICTURE

  49  connect : CONNECT

  50  disconnect : DISCONNECT

  51  returnStatement : RETURN logicCondition
  52                  | RETURN STRING
  53                  | empty

  54  logicCondition : logicCondition logicOp notNonLogicExp
  55                 | notNonLogicExp

  56  notNonLogicExp : NOT nonLogicExp
  57                 | nonLogicExp

  58  nonLogicExp : functionCall
  59              | BOOLEAN
  60              | arithmeticExp

  61  logicOp : EQUAL
  62          | NOTEQUAL
  63          | GREATERTHAN
  64          | GREATERTHANOREQUAL
  65          | LESSTHAN
  66          | LESSTHANOREQUAL
  67          | AND
  68          | OR

  69  arithmeticExp : arithmeticExp leastPrecMathOp multiplyDivide
  70                | multiplyDivide

  71  multiplyDivide : multiplyDivide mostPrecMathOp number
  72                 | number

  73  leastPrecMathOp : PLUS
  74                  | MINUS

  75  mostPrecMathOp : MULTIPLY
  76                 | DIVIDE
  77                 | REMAINDER

  78  matched : IF logicCondition LB statementBlocks RB ELSE LB statementBlocks RB
  79          | IF logicCondition LB matched RB ELSE LB statementBlocks RB
  80          | IF logicCondition LB matched RB ELSE LB matched RB

  81  unmatched : IF logicCondition LB statementBlocks RB
  82            | IF logicCondition LB matched RB ELSE LB unmatched RB

  83  type : INTTYPE
  84       | DOUBLETYPE
  85       | STRINGTYPE
  86       | BOOLTYPE

  87  statementBlocks : statementBlocks statementBlockEl
  88                  | empty

  89  statementBlockEl : COMMENT
  90                   | declaration
  91                   | assignment
  92                   | loopStatement
  93                   | functionCall

  94  empty :

  95  number : INTEGER
  96         | DOUBLE
  97         | VARIABLE

  98  parameterExp : LP RP
  99               | LP functionParams RP

 100  functionParams : functionParams COMMA functionParam
 101                 | functionParam

 102  functionParam : type COLON VARIABLE

 103  functionoutExp : FUNCTIONOUT functionParam

 104  forStepExp : BY INTEGER

 105  forTerm : VARIABLE
 106          | INTEGER
 107          | functionCall
 108          | LP arithmeticExp RP

 109  callParamList : callParamList COMMA funcCallParam
 110                | funcCallParam

 111  funcCallParam : VARIABLE
 112                | CONSTANT
 113                | INTEGER
 114                | DOUBLE
 115                | STRING
 116                | BOOLEAN

state 0
	$accept : . program $end  (0)

	MAIN  shift 1
	.  error

	program  goto 2


state 1
	program : MAIN . LB statements RB  (1)

	LB  shift 3
	.  error


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : MAIN LB . statements RB  (1)
	empty : .  (94)

	.  reduce 94

	statements  goto 4
	empty  goto 5


state 4
	program : MAIN LB statements . RB  (1)
	statements : statements . statement  (2)

	INTTYPE  shift 6
	DOUBLETYPE  shift 7
	BOOLTYPE  shift 8
	STRINGTYPE  shift 9
	VARIABLE  shift 10
	RB  shift 11
	COMMENT  shift 12
	CONST  shift 13
	FOR  shift 14
	WHILE  shift 15
	FUNC  shift 16
	GETINCLINATION  shift 17
	GETALTITUDE  shift 18
	GETTEMPERATURE  shift 19
	GETACCELERATION  shift 20
	GETTIMESTAMP  shift 21
	TAKEPICTURE  shift 22
	TURNCAMERA  shift 23
	CONNECT  shift 24
	DISCONNECT  shift 25
	PRINT  shift 26
	IF  shift 27
	.  error

	statement  goto 28
	statementBlockEl  goto 29
	ifStatement  goto 30
	matched  goto 31
	unmatched  goto 32
	loopStatement  goto 33
	forLoop  goto 34
	whileLoop  goto 35
	assignment  goto 36
	declaration  goto 37
	constantDec  goto 38
	variableDec  goto 39
	functionDec  goto 40
	type  goto 41
	functionCall  goto 42
	outStatement  goto 43
	inStatement  goto 44
	drone_method  goto 45
	droneGet  goto 46
	cameraStatus  goto 47
	takePicture  goto 48
	connect  goto 49
	disconnect  goto 50


state 5
	statements : empty .  (3)

	.  reduce 3


state 6
	type : INTTYPE .  (83)

	.  reduce 83


state 7
	type : DOUBLETYPE .  (84)

	.  reduce 84


state 8
	type : BOOLTYPE .  (86)

	.  reduce 86


state 9
	type : STRINGTYPE .  (85)

	.  reduce 85


state 10
	assignment : VARIABLE . ASSIGN logicCondition  (13)
	assignment : VARIABLE . ASSIGN STRING  (14)
	functionCall : VARIABLE . LP RP  (26)
	functionCall : VARIABLE . LP callParamList RP  (27)
	inStatement : VARIABLE . ASSIGN SCAN  (36)

	LP  shift 51
	ASSIGN  shift 52
	.  error


state 11
	program : MAIN LB statements RB .  (1)

	.  reduce 1


state 12
	statementBlockEl : COMMENT .  (89)

	.  reduce 89


state 13
	constantDec : CONST . type COLON CONSTANT ASSIGN logicCondition  (18)
	constantDec : CONST . type COLON CONSTANT ASSIGN STRING  (19)

	INTTYPE  shift 6
	DOUBLETYPE  shift 7
	BOOLTYPE  shift 8
	STRINGTYPE  shift 9
	.  error

	type  goto 53


state 14
	forLoop : FOR . VARIABLE IN forTerm FORDOT forTerm forStepExp LB statements RB  (10)
	forLoop : FOR . VARIABLE IN forTerm FORDOT forTerm LB statements RB  (11)

	VARIABLE  shift 54
	.  error


state 15
	whileLoop : WHILE . logicCondition LB statements RB  (12)

	VARIABLE  shift 55
	INTEGER  shift 56
	NOT  shift 57
	GETINCLINATION  shift 17
	GETALTITUDE  shift 18
	GETTEMPERATURE  shift 19
	GETACCELERATION  shift 20
	GETTIMESTAMP  shift 21
	TAKEPICTURE  shift 22
	TURNCAMERA  shift 23
	CONNECT  shift 24
	DISCONNECT  shift 25
	PRINT  shift 26
	BOOLEAN  shift 58
	DOUBLE  shift 59
	.  error

	logicCondition  goto 60
	functionCall  goto 61
	outStatement  goto 43
	inStatement  goto 44
	drone_method  goto 45
	droneGet  goto 46
	cameraStatus  goto 47
	takePicture  goto 48
	connect  goto 49
	disconnect  goto 50
	notNonLogicExp  goto 62
	nonLogicExp  goto 63
	arithmeticExp  goto 64
	multiplyDivide  goto 65
	number  goto 66


state 16
	functionDec : FUNC . VARIABLE parameterExp functionoutExp LB statements returnStatement RB  (24)
	functionDec : FUNC . VARIABLE parameterExp LB statements returnStatement RB  (25)

	VARIABLE  shift 67
	.  error


state 17
	droneGet : GETINCLINATION .  (44)

	.  reduce 44


state 18
	droneGet : GETALTITUDE .  (43)

	.  reduce 43


state 19
	droneGet : GETTEMPERATURE .  (45)

	.  reduce 45


state 20
	droneGet : GETACCELERATION .  (42)

	.  reduce 42


state 21
	droneGet : GETTIMESTAMP .  (46)

	.  reduce 46


state 22
	takePicture : TAKEPICTURE .  (48)

	.  reduce 48


state 23
	cameraStatus : TURNCAMERA .  (47)

	.  reduce 47


state 24
	connect : CONNECT .  (49)

	.  reduce 49


state 25
	disconnect : DISCONNECT .  (50)

	.  reduce 50


state 26
	outStatement : PRINT . printables  (31)

	VARIABLE  shift 55
	INTEGER  shift 56
	NOT  shift 57
	GETINCLINATION  shift 17
	GETALTITUDE  shift 18
	GETTEMPERATURE  shift 19
	GETACCELERATION  shift 20
	GETTIMESTAMP  shift 21
	TAKEPICTURE  shift 22
	TURNCAMERA  shift 23
	CONNECT  shift 24
	DISCONNECT  shift 25
	PRINT  shift 26
	BOOLEAN  shift 58
	DOUBLE  shift 59
	STRING  shift 68
	.  error

	logicCondition  goto 69
	functionCall  goto 61
	outStatement  goto 43
	inStatement  goto 44
	drone_method  goto 45
	printables  goto 70
	droneGet  goto 46
	cameraStatus  goto 47
	takePicture  goto 48
	connect  goto 49
	disconnect  goto 50
	notNonLogicExp  goto 62
	nonLogicExp  goto 63
	arithmeticExp  goto 64
	multiplyDivide  goto 65
	number  goto 66


state 27
	matched : IF . logicCondition LB statementBlocks RB ELSE LB statementBlocks RB  (78)
	matched : IF . logicCondition LB matched RB ELSE LB statementBlocks RB  (79)
	matched : IF . logicCondition LB matched RB ELSE LB matched RB  (80)
	unmatched : IF . logicCondition LB statementBlocks RB  (81)
	unmatched : IF . logicCondition LB matched RB ELSE LB unmatched RB  (82)

	VARIABLE  shift 55
	INTEGER  shift 56
	NOT  shift 57
	GETINCLINATION  shift 17
	GETALTITUDE  shift 18
	GETTEMPERATURE  shift 19
	GETACCELERATION  shift 20
	GETTIMESTAMP  shift 21
	TAKEPICTURE  shift 22
	TURNCAMERA  shift 23
	CONNECT  shift 24
	DISCONNECT  shift 25
	PRINT  shift 26
	BOOLEAN  shift 58
	DOUBLE  shift 59
	.  error

	logicCondition  goto 71
	functionCall  goto 61
	outStatement  goto 43
	inStatement  goto 44
	drone_method  goto 45
	droneGet  goto 46
	cameraStatus  goto 47
	takePicture  goto 48
	connect  goto 49
	disconnect  goto 50
	notNonLogicExp  goto 62
	nonLogicExp  goto 63
	arithmeticExp  goto 64
	multiplyDivide  goto 65
	number  goto 66


state 28
	statements : statements statement .  (2)

	.  reduce 2


state 29
	statement : statementBlockEl .  (4)

	.  reduce 4


state 30
	statement : ifStatement .  (5)

	.  reduce 5


state 31
	ifStatement : matched .  (6)

	.  reduce 6


state 32
	ifStatement : unmatched .  (7)

	.  reduce 7


state 33
	statementBlockEl : loopStatement .  (92)

	.  reduce 92


state 34
	loopStatement : forLoop .  (8)

	.  reduce 8


state 35
	loopStatement : whileLoop .  (9)

	.  reduce 9


state 36
	statementBlockEl : assignment .  (91)

	.  reduce 91


state 37
	statementBlockEl : declaration .  (90)

	.  reduce 90


state 38
	declaration : constantDec .  (15)

	.  reduce 15


state 39
	declaration : variableDec .  (16)

	.  reduce 16


state 40
	declaration : functionDec .  (17)

	.  reduce 17


state 41
	variableDec : type . COLON VARIABLE  (20)
	variableDec : type . COLON VARIABLE ASSIGN logicCondition  (21)
	variableDec : type . COLON VARIABLE ASSIGN STRING  (22)
	variableDec : type . COLON VARIABLE ASSIGN SCAN  (23)

	COLON  shift 72
	.  error


state 42
	statementBlockEl : functionCall .  (93)

	.  reduce 93


state 43
	functionCall : outStatement .  (28)

	.  reduce 28


state 44
	functionCall : inStatement .  (29)

	.  reduce 29


state 45
	functionCall : drone_method . LP RP  (30)

	LP  shift 73
	.  error


state 46
	drone_method : droneGet .  (37)

	.  reduce 37


state 47
	drone_method : cameraStatus .  (38)

	.  reduce 38


state 48
	drone_method : takePicture .  (39)

	.  reduce 39


state 49
	drone_method : connect .  (40)

	.  reduce 40


state 50
	drone_method : disconnect .  (41)

	.  reduce 41


state 51
	functionCall : VARIABLE LP . RP  (26)
	functionCall : VARIABLE LP . callParamList RP  (27)

	VARIABLE  shift 74
	INTEGER  shift 75
	RP  shift 76
	BOOLEAN  shift 77
	DOUBLE  shift 78
	STRING  shift 79
	CONSTANT  shift 80
	.  error

	callParamList  goto 81
	funcCallParam  goto 82


state 52
	assignment : VARIABLE ASSIGN . logicCondition  (13)
	assignment : VARIABLE ASSIGN . STRING  (14)
	inStatement : VARIABLE ASSIGN . SCAN  (36)

	VARIABLE  shift 55
	INTEGER  shift 56
	NOT  shift 57
	GETINCLINATION  shift 17
	GETALTITUDE  shift 18
	GETTEMPERATURE  shift 19
	GETACCELERATION  shift 20
	GETTIMESTAMP  shift 21
	TAKEPICTURE  shift 22
	TURNCAMERA  shift 23
	CONNECT  shift 24
	DISCONNECT  shift 25
	PRINT  shift 26
	SCAN  shift 83
	BOOLEAN  shift 58
	DOUBLE  shift 59
	STRING  shift 84
	.  error

	logicCondition  goto 85
	functionCall  goto 61
	outStatement  goto 43
	inStatement  goto 44
	drone_method  goto 45
	droneGet  goto 46
	cameraStatus  goto 47
	takePicture  goto 48
	connect  goto 49
	disconnect  goto 50
	notNonLogicExp  goto 62
	nonLogicExp  goto 63
	arithmeticExp  goto 64
	multiplyDivide  goto 65
	number  goto 66


state 53
	constantDec : CONST type . COLON CONSTANT ASSIGN logicCondition  (18)
	constantDec : CONST type . COLON CONSTANT ASSIGN STRING  (19)

	COLON  shift 86
	.  error


state 54
	forLoop : FOR VARIABLE . IN forTerm FORDOT forTerm forStepExp LB statements RB  (10)
	forLoop : FOR VARIABLE . IN forTerm FORDOT forTerm LB statements RB  (11)

	IN  shift 87
	.  error


state 55
	functionCall : VARIABLE . LP RP  (26)
	functionCall : VARIABLE . LP callParamList RP  (27)
	inStatement : VARIABLE . ASSIGN SCAN  (36)
	number : VARIABLE .  (97)

	LP  shift 51
	ASSIGN  shift 88
	INTTYPE  reduce 97
	DOUBLETYPE  reduce 97
	BOOLTYPE  reduce 97
	STRINGTYPE  reduce 97
	VARIABLE  reduce 97
	LB  reduce 97
	RB  reduce 97
	COMMENT  reduce 97
	CONST  reduce 97
	FOR  reduce 97
	FORDOT  reduce 97
	WHILE  reduce 97
	FUNC  reduce 97
	RETURN  reduce 97
	COMMA  reduce 97
	GETINCLINATION  reduce 97
	GETALTITUDE  reduce 97
	GETTEMPERATURE  reduce 97
	GETACCELERATION  reduce 97
	GETTIMESTAMP  reduce 97
	TAKEPICTURE  reduce 97
	TURNCAMERA  reduce 97
	CONNECT  reduce 97
	DISCONNECT  reduce 97
	PRINT  reduce 97
	MULTIPLY  reduce 97
	IF  reduce 97
	BY  reduce 97
	EQUAL  reduce 97
	NOTEQUAL  reduce 97
	GREATERTHAN  reduce 97
	LESSTHAN  reduce 97
	GREATERTHANOREQUAL  reduce 97
	LESSTHANOREQUAL  reduce 97
	AND  reduce 97
	OR  reduce 97
	PLUS  reduce 97
	MINUS  reduce 97
	REMAINDER  reduce 97
	DIVIDE  reduce 97


state 56
	number : INTEGER .  (95)

	.  reduce 95


state 57
	notNonLogicExp : NOT . nonLogicExp  (56)

	VARIABLE  shift 55
	INTEGER  shift 56
	GETINCLINATION  shift 17
	GETALTITUDE  shift 18
	GETTEMPERATURE  shift 19
	GETACCELERATION  shift 20
	GETTIMESTAMP  shift 21
	TAKEPICTURE  shift 22
	TURNCAMERA  shift 23
	CONNECT  shift 24
	DISCONNECT  shift 25
	PRINT  shift 26
	BOOLEAN  shift 58
	DOUBLE  shift 59
	.  error

	functionCall  goto 61
	outStatement  goto 43
	inStatement  goto 44
	drone_method  goto 45
	droneGet  goto 46
	cameraStatus  goto 47
	takePicture  goto 48
	connect  goto 49
	disconnect  goto 50
	nonLogicExp  goto 89
	arithmeticExp  goto 64
	multiplyDivide  goto 65
	number  goto 66


state 58
	nonLogicExp : BOOLEAN .  (59)

	.  reduce 59


state 59
	number : DOUBLE .  (96)

	.  reduce 96


state 60
	whileLoop : WHILE logicCondition . LB statements RB  (12)
	logicCondition : logicCondition . logicOp notNonLogicExp  (54)

	LB  shift 90
	EQUAL  shift 91
	NOTEQUAL  shift 92
	GREATERTHAN  shift 93
	LESSTHAN  shift 94
	GREATERTHANOREQUAL  shift 95
	LESSTHANOREQUAL  shift 96
	AND  shift 97
	OR  shift 98
	.  error

	logicOp  goto 99


state 61
	nonLogicExp : functionCall .  (58)

	.  reduce 58


state 62
	logicCondition : notNonLogicExp .  (55)

	.  reduce 55


state 63
	notNonLogicExp : nonLogicExp .  (57)

	.  reduce 57


state 64
	nonLogicExp : arithmeticExp .  (60)
	arithmeticExp : arithmeticExp . leastPrecMathOp multiplyDivide  (69)

	PLUS  shift 100
	MINUS  shift 101
	INTTYPE  reduce 60
	DOUBLETYPE  reduce 60
	BOOLTYPE  reduce 60
	STRINGTYPE  reduce 60
	VARIABLE  reduce 60
	LB  reduce 60
	RB  reduce 60
	COMMENT  reduce 60
	CONST  reduce 60
	FOR  reduce 60
	FORDOT  reduce 60
	WHILE  reduce 60
	FUNC  reduce 60
	RETURN  reduce 60
	COMMA  reduce 60
	GETINCLINATION  reduce 60
	GETALTITUDE  reduce 60
	GETTEMPERATURE  reduce 60
	GETACCELERATION  reduce 60
	GETTIMESTAMP  reduce 60
	TAKEPICTURE  reduce 60
	TURNCAMERA  reduce 60
	CONNECT  reduce 60
	DISCONNECT  reduce 60
	PRINT  reduce 60
	IF  reduce 60
	BY  reduce 60
	EQUAL  reduce 60
	NOTEQUAL  reduce 60
	GREATERTHAN  reduce 60
	LESSTHAN  reduce 60
	GREATERTHANOREQUAL  reduce 60
	LESSTHANOREQUAL  reduce 60
	AND  reduce 60
	OR  reduce 60

	leastPrecMathOp  goto 102


state 65
	arithmeticExp : multiplyDivide .  (70)
	multiplyDivide : multiplyDivide . mostPrecMathOp number  (71)

	MULTIPLY  shift 103
	REMAINDER  shift 104
	DIVIDE  shift 105
	INTTYPE  reduce 70
	DOUBLETYPE  reduce 70
	BOOLTYPE  reduce 70
	STRINGTYPE  reduce 70
	VARIABLE  reduce 70
	RP  reduce 70
	LB  reduce 70
	RB  reduce 70
	COMMENT  reduce 70
	CONST  reduce 70
	FOR  reduce 70
	FORDOT  reduce 70
	WHILE  reduce 70
	FUNC  reduce 70
	RETURN  reduce 70
	COMMA  reduce 70
	GETINCLINATION  reduce 70
	GETALTITUDE  reduce 70
	GETTEMPERATURE  reduce 70
	GETACCELERATION  reduce 70
	GETTIMESTAMP  reduce 70
	TAKEPICTURE  reduce 70
	TURNCAMERA  reduce 70
	CONNECT  reduce 70
	DISCONNECT  reduce 70
	PRINT  reduce 70
	IF  reduce 70
	BY  reduce 70
	EQUAL  reduce 70
	NOTEQUAL  reduce 70
	GREATERTHAN  reduce 70
	LESSTHAN  reduce 70
	GREATERTHANOREQUAL  reduce 70
	LESSTHANOREQUAL  reduce 70
	AND  reduce 70
	OR  reduce 70
	PLUS  reduce 70
	MINUS  reduce 70

	mostPrecMathOp  goto 106


state 66
	multiplyDivide : number .  (72)

	.  reduce 72


state 67
	functionDec : FUNC VARIABLE . parameterExp functionoutExp LB statements returnStatement RB  (24)
	functionDec : FUNC VARIABLE . parameterExp LB statements returnStatement RB  (25)

	LP  shift 107
	.  error

	parameterExp  goto 108


state 68
	printables : STRING .  (35)

	.  reduce 35


69: shift/reduce conflict (shift 91, reduce 34) on EQUAL
69: shift/reduce conflict (shift 92, reduce 34) on NOTEQUAL
69: shift/reduce conflict (shift 93, reduce 34) on GREATERTHAN
69: shift/reduce conflict (shift 94, reduce 34) on LESSTHAN
69: shift/reduce conflict (shift 95, reduce 34) on GREATERTHANOREQUAL
69: shift/reduce conflict (shift 96, reduce 34) on LESSTHANOREQUAL
69: shift/reduce conflict (shift 97, reduce 34) on AND
69: shift/reduce conflict (shift 98, reduce 34) on OR
state 69
	printables : logicCondition .  (34)
	logicCondition : logicCondition . logicOp notNonLogicExp  (54)

	EQUAL  shift 91
	NOTEQUAL  shift 92
	GREATERTHAN  shift 93
	LESSTHAN  shift 94
	GREATERTHANOREQUAL  shift 95
	LESSTHANOREQUAL  shift 96
	AND  shift 97
	OR  shift 98
	INTTYPE  reduce 34
	DOUBLETYPE  reduce 34
	BOOLTYPE  reduce 34
	STRINGTYPE  reduce 34
	VARIABLE  reduce 34
	LB  reduce 34
	RB  reduce 34
	COMMENT  reduce 34
	CONST  reduce 34
	FOR  reduce 34
	FORDOT  reduce 34
	WHILE  reduce 34
	FUNC  reduce 34
	RETURN  reduce 34
	COMMA  reduce 34
	GETINCLINATION  reduce 34
	GETALTITUDE  reduce 34
	GETTEMPERATURE  reduce 34
	GETACCELERATION  reduce 34
	GETTIMESTAMP  reduce 34
	TAKEPICTURE  reduce 34
	TURNCAMERA  reduce 34
	CONNECT  reduce 34
	DISCONNECT  reduce 34
	PRINT  reduce 34
	IF  reduce 34
	BY  reduce 34

	logicOp  goto 99


70: shift/reduce conflict (shift 109, reduce 31) on COMMA
state 70
	outStatement : PRINT printables .  (31)
	printables : printables . COMMA logicCondition  (32)
	printables : printables . COMMA STRING  (33)

	COMMA  shift 109
	INTTYPE  reduce 31
	DOUBLETYPE  reduce 31
	BOOLTYPE  reduce 31
	STRINGTYPE  reduce 31
	VARIABLE  reduce 31
	LB  reduce 31
	RB  reduce 31
	COMMENT  reduce 31
	CONST  reduce 31
	FOR  reduce 31
	FORDOT  reduce 31
	WHILE  reduce 31
	FUNC  reduce 31
	RETURN  reduce 31
	GETINCLINATION  reduce 31
	GETALTITUDE  reduce 31
	GETTEMPERATURE  reduce 31
	GETACCELERATION  reduce 31
	GETTIMESTAMP  reduce 31
	TAKEPICTURE  reduce 31
	TURNCAMERA  reduce 31
	CONNECT  reduce 31
	DISCONNECT  reduce 31
	PRINT  reduce 31
	IF  reduce 31
	BY  reduce 31
	EQUAL  reduce 31
	NOTEQUAL  reduce 31
	GREATERTHAN  reduce 31
	LESSTHAN  reduce 31
	GREATERTHANOREQUAL  reduce 31
	LESSTHANOREQUAL  reduce 31
	AND  reduce 31
	OR  reduce 31


state 71
	logicCondition : logicCondition . logicOp notNonLogicExp  (54)
	matched : IF logicCondition . LB statementBlocks RB ELSE LB statementBlocks RB  (78)
	matched : IF logicCondition . LB matched RB ELSE LB statementBlocks RB  (79)
	matched : IF logicCondition . LB matched RB ELSE LB matched RB  (80)
	unmatched : IF logicCondition . LB statementBlocks RB  (81)
	unmatched : IF logicCondition . LB matched RB ELSE LB unmatched RB  (82)

	LB  shift 110
	EQUAL  shift 91
	NOTEQUAL  shift 92
	GREATERTHAN  shift 93
	LESSTHAN  shift 94
	GREATERTHANOREQUAL  shift 95
	LESSTHANOREQUAL  shift 96
	AND  shift 97
	OR  shift 98
	.  error

	logicOp  goto 99


state 72
	variableDec : type COLON . VARIABLE  (20)
	variableDec : type COLON . VARIABLE ASSIGN logicCondition  (21)
	variableDec : type COLON . VARIABLE ASSIGN STRING  (22)
	variableDec : type COLON . VARIABLE ASSIGN SCAN  (23)

	VARIABLE  shift 111
	.  error


state 73
	functionCall : drone_method LP . RP  (30)

	RP  shift 112
	.  error


state 74
	funcCallParam : VARIABLE .  (111)

	.  reduce 111


state 75
	funcCallParam : INTEGER .  (113)

	.  reduce 113


state 76
	functionCall : VARIABLE LP RP .  (26)

	.  reduce 26


state 77
	funcCallParam : BOOLEAN .  (116)

	.  reduce 116


state 78
	funcCallParam : DOUBLE .  (114)

	.  reduce 114


state 79
	funcCallParam : STRING .  (115)

	.  reduce 115


state 80
	funcCallParam : CONSTANT .  (112)

	.  reduce 112


state 81
	functionCall : VARIABLE LP callParamList . RP  (27)
	callParamList : callParamList . COMMA funcCallParam  (109)

	RP  shift 113
	COMMA  shift 114
	.  error


state 82
	callParamList : funcCallParam .  (110)

	.  reduce 110


state 83
	inStatement : VARIABLE ASSIGN SCAN .  (36)

	.  reduce 36


state 84
	assignment : VARIABLE ASSIGN STRING .  (14)

	.  reduce 14


state 85
	assignment : VARIABLE ASSIGN logicCondition .  (13)
	logicCondition : logicCondition . logicOp notNonLogicExp  (54)

	EQUAL  shift 91
	NOTEQUAL  shift 92
	GREATERTHAN  shift 93
	LESSTHAN  shift 94
	GREATERTHANOREQUAL  shift 95
	LESSTHANOREQUAL  shift 96
	AND  shift 97
	OR  shift 98
	INTTYPE  reduce 13
	DOUBLETYPE  reduce 13
	BOOLTYPE  reduce 13
	STRINGTYPE  reduce 13
	VARIABLE  reduce 13
	RB  reduce 13
	COMMENT  reduce 13
	CONST  reduce 13
	FOR  reduce 13
	WHILE  reduce 13
	FUNC  reduce 13
	RETURN  reduce 13
	GETINCLINATION  reduce 13
	GETALTITUDE  reduce 13
	GETTEMPERATURE  reduce 13
	GETACCELERATION  reduce 13
	GETTIMESTAMP  reduce 13
	TAKEPICTURE  reduce 13
	TURNCAMERA  reduce 13
	CONNECT  reduce 13
	DISCONNECT  reduce 13
	PRINT  reduce 13
	IF  reduce 13

	logicOp  goto 99

